--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Travis build status](https://travis-ci.org/wwwjk366/teamr.svg?branch=master)](https://travis-ci.org/wwwjk366/teamr)
+[![CRAN status](https://www.r-pkg.org/badges/version/teamr)](https://cran.r-project.org/package=teamr)
 <!-- badges: end -->
 
 <img src="inst/media/logo.png" align="right" width="150" height="170" />
